@@ -9,10 +9,11 @@ icon_DATA =\
 	gnome-fs-bookmark-missing.png \
 	gnome-fs-client.png \
 	gnome-fs-desktop.png \
-#	gnome-fs-local-shared-folder.png \
+	gnome-fs-locally-shared.png \
 	gnome-fs-network.png \
 	gnome-fs-server.png \
 	gnome-fs-share.png \
+	gnome-fs-share-private.png \
 	gnome-fs-trash-empty.png \
 	gnome-fs-trash-full.png \
 	$(NULL)
