@@ -1,3 +1,14 @@
+2005-01-20  Jakub Steiner <jimmac@ximian.com>
+
+	* 16x16/filesystems/Makefile.am
+	* 16x16/filesystems/gnome-fs-locally-shared.png
+	* 16x16/filesystems/gnome-fs-share-private.png
+	* 24x24/filesystems/Makefile.am
+	* 24x24/filesystems/gnome-fs-locally-shared.png
+	* 24x24/filesystems/gnome-fs-share-private.png
+	* 24x24/filesystems/gnome-fs-share.png: network shares and locally shared
+		folders.
+
 2005-01-19  Jakub Steiner <jimmac@ximian.com>
 
 	* 48x48/filesystems/gnome-fs-trash-empty.png
